changes to mylist and search page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -259,3 +259,24 @@ footer .mdl-logo a {
   height: 40px;
   max-height: 40px !important;
 }
+
+.listButtonsBox {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+#allButton {
+  background-color: tomato;
+  width: 100px;
+}
+
+#moviesButton {
+  background-color: tomato;
+  width: 100px;
+}
+
+#podButton {
+  background-color: tomato;
+  width: 100px;
+}
