--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -101,12 +101,6 @@ img {
   max-width: 700px;
 }
 
-.welcome-card > .mdl-card__title {
-  color: black;
-  height: 290px;
-  /* background: url("../img/cover.jpg") center/cover; */
-}
-
 .event-card {
   background: #3E4EB8;
 }
@@ -118,6 +112,8 @@ img {
 .event-card .mdl-card__title {
   -ms-flex-align: start;
       align-items: flex-start;
+
+  background: transparent;
 }
 
 .event-card .mdl-card__title > h4 {
@@ -229,7 +225,7 @@ footer .mdl-logo a {
 }
 
 
-/* added */
+/* added =========================================================================== */
 
 .landingBackground {
   background: url("../img/movieBackground.jpeg") center/cover;
@@ -237,6 +233,7 @@ footer .mdl-logo a {
 
 .signUpCard {
   margin-top: 60px;
+  text-align: center;
 }
 
 .headerBackground {
@@ -244,14 +241,6 @@ footer .mdl-logo a {
 }
 
 .headerSmallerBackground {
-  background-color: #ff7158;
-}
-
-#signUpButton {
-  background-color: tomato;
-}
-
-#signUpButton:hover {
   background-color: #ff7158;
 }
 
@@ -279,4 +268,63 @@ footer .mdl-logo a {
 #podButton {
   background-color: tomato;
   width: 100px;
+}
+
+.catCard:hover {
+  cursor: pointer;
+}
+
+#searchContainer {
+  display: flex;
+  width: 80vw;
+  /* border: 2px solid green; */
+}
+
+#searchDescription {
+  /* border: 1px solid blue; */
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 40%;
+}
+
+#searchCardImageBox {
+  color: white;
+  height: 180px;
+  background: url("../img/cover.jpg") center/cover;
+  /* border: 2px solid red; */
+  margin: 0px;
+  float: left;
+  height: 100%;
+  width: 60%;
+}
+
+#searchBoxContainer {
+  /* border: 2px solid purple; */
+  height: 100%;
+  width: 100%;
+}
+
+#homeCard {
+  background-color: transparent;
+}
+
+#signUpText {
+  color: white;
+  font-size: 40px;
+  font-weight: 400;
+}
+
+#signUpButton {
+  height: 50px;
+  width: 100%;
+  background-color: whitesmoke;
+  color: black;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+#signUpButton:hover {
+  cursor: pointer;
 }
