Change background of save button

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -310,6 +310,10 @@ footer .mdl-logo a {
   width: 100%;
 }
 
+.saveButton {
+  background-color: tomato;
+}
+
 #homeCard {
   background-color: transparent;
 }
